--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-player": "^2.7.0",
     "react-scripts": "3.4.1",
     "react-youtube": "^7.11.2",
     "semantic-ui-react": "^0.88.2"
